# citestrike

./: .gitignore  FIX_CITESTRIKE_USABILITY.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/chunks/: DzWuZmQg.js  LEypfyLm.js  _l7E0O-9.js
.svelte-kit/output/client/_app/immutable/entry/: start.B7a-dPQd.js
.svelte-kit/output/client/_app/immutable/nodes/: 1.n26T53oY.js  2.CLsIAZ2d.js
.svelte-kit/output/prerendered/pages/: index.html
.svelte-kit/output/server/: manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _page.B5fmGzx0.css
.svelte-kit/output/server/chunks/: index.js  internal.js  root.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  citation.rs  commands.rs  crossref.rs  db.rs  lib.rs  pdf.rs  rich_clipboard.rs  word_insert.rs
src-tauri/src/addin/: manifest.xml  taskpane.css  taskpane.html  taskpane.js
src/lib/: tauri.ts
src/lib/components/: CitationItem.svelte  HelpGuide.svelte  SearchBar.svelte  Sidebar.svelte  TitleBar.svelte
src/routes/: +page.svelte
workflows/: release.yml.txt
